# limansky_me

./: .gitignore  .travis.yml  README.md  index.html  limansky-me.cabal  package-lock.json  package.json  robots.txt
css/: default.css  limansky.scss
drafts/: 2015-10-28-getting-started-with-shapeless.md  2015-11-03-getting-started-with-shapeless.md  2015-12-09-Batch-cherry-picking-in-git.md  2016-04-14-easy-json-analyze-with-spray-json.md  2016-07-02-Scala-type-variance-and-Java-collections.md  2016-11-20-getting-started-with-shapeless.md  2016-11-27-fixing-bugs.md  2016-12-18-Generating-SQL-requests-with-shapeless.md  2016-12-24-pagination-with-hakyll.md  2017-01-21-generating-sql-requests-with-shapeless.md  2017-02-24-How-does-shapeless-work.md  2017-04-03-introducing-beanpuree.md  2021-07-24-from-scala-2-shapeless-to-scala-3.md
pages/: 404.md  about.md  index.html
pandoc-templates/: revealjs.html
posts/: 2015-06-26-my-first-blog-post.md  2015-06-27-why-hakyll.md  2015-06-28-install-hakyll-on-gentoo.md  2015-07-06-putting-posts-content-on-index.md  2015-08-17-nvidia-340-and-kernel-4-0.md  2015-10-31-Draft-posts-with-Hakyll.md  2015-12-16-Batch-cherry-picking-in-git.md  2016-04-30-easy-json-analyze-with-spray-json.md  2016-05-16-A-little-bit-more-about-git-cherry-pick.md  2016-05-16-Little-bit-more-about-cherry-picking.md  2016-07-20-Scala-type-variance-and-Java-collections.md  2016-11-24-getting-started-with-shapeless.md  2016-12-22-fixing-bugs-in-sql-saver.md  2016-12-28-pagination-with-hakyll.md  2017-01-28-firefox-esr-and-xmonad.md  2023-10-06-Orange-Noise.md  (+6 more)
(+16 files in other folders)
