name:               limansky-me
version:            0.3.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  hs-source-dirs:   src
  build-depends:    base == 4.*
                  , hakyll >= 4.7 && < 4.17
                  , containers >= 0.3 && < 0.7
                  , process >= 1.6 && < 1.7
  ghc-options:      -threaded
  default-language: Haskell2010
